# database_manager

./: .dockerignore  .gitignore  Dockerfile  README.md  hello.py  pyproject.toml
examples/: google_drive_example.py
src/: __init__.py  backup.py  database_manager.py  google_drive_manager.py  main.py  minio_manager.py
src/config/: __init__.py  env.py
