[project]
name = "database-backup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "minio>=7.2.15",
    "mysql-connector-python>=9.3.0",
    "prefect>=3.4.0",
    "psycopg2-binary>=2.9.10",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.5.0",
]
